--- a/css/index.css
+++ b/css/index.css
@@ -498,16 +498,16 @@ body {
     display: flex;
     width: 100%;
     height: 100%;
-    box-sizing: border-box;
 }
 
 .carousel-slide {
     flex: 0 0 100%;
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: cover; /* 關鍵 */
     display: block;
 }
+
 
 
 /* 按鈕樣式不變，稍微調整高度 */
